pyk/src/tests/unit/kore/test-data/definitions/pass/test-pattern-4.kore
[]

module TEST-PATTERN-4

  axiom{S}
    \or{S}(X:S,X:S) []

endmodule []
