pyk/src/tests/unit/kore/test-data/definitions/fail/test-dv-2.kore
[]
module DV-2
    axiom {s} \dv{s}(\or{#String{}}("0", "1")) []
endmodule
[]
